syntax = "proto3";
package protolca.services;

option java_package = "org.openlca.proto.generated";
option csharp_namespace = "ProtoLCA.Services";
option go_package = ".;protolca";

import "google/protobuf/empty.proto";
import "olca.proto";

service DataService {

  // methods for Actor
  rpc GetActors(google.protobuf.Empty) returns (stream protolca.Actor);
  rpc GetActor(protolca.Ref) returns (Actor);
  rpc PutActor(protolca.Actor) returns (Ref);

  // methods for Category
  rpc GetCategories(google.protobuf.Empty) returns (stream protolca.Category);
  rpc GetCategory(protolca.Ref) returns (Category);
  rpc PutCategory(protolca.Category) returns (Ref);

  // methods for Currency
  rpc GetCurrencies(google.protobuf.Empty) returns (stream protolca.Currency);
  rpc GetCurrency(protolca.Ref) returns (Currency);
  rpc PutCurrency(protolca.Currency) returns (Ref);

  // methods for DQSystem
  rpc GetDQSystems(google.protobuf.Empty) returns (stream protolca.DQSystem);
  rpc GetDQSystem(protolca.Ref) returns (DQSystem);
  rpc PutDQSystem(protolca.DQSystem) returns (Ref);

  // methods for Flow
  rpc GetFlows(google.protobuf.Empty) returns (stream protolca.Flow);
  rpc GetFlow(protolca.Ref) returns (Flow);
  rpc PutFlow(protolca.Flow) returns (Ref);

  // methods for FlowProperty
  rpc GetFlowProperties(google.protobuf.Empty) returns (stream protolca.FlowProperty);
  rpc GetFlowProperty(protolca.Ref) returns (FlowProperty);
  rpc PutFlowProperty(protolca.FlowProperty) returns (Ref);

  // methods for ImpactCategory
  rpc GetImpactCategories(google.protobuf.Empty) returns (stream protolca.ImpactCategory);
  rpc GetImpactCategory(protolca.Ref) returns (ImpactCategory);
  rpc PutImpactCategory(protolca.ImpactCategory) returns (Ref);

  // methods for ImpactMethod
  rpc GetImpactMethods(google.protobuf.Empty) returns (stream protolca.ImpactMethod);
  rpc GetImpactMethod(protolca.Ref) returns (ImpactMethod);
  rpc PutImpactMethod(protolca.ImpactMethod) returns (Ref);

  // methods for Location
  rpc GetLocations(google.protobuf.Empty) returns (stream protolca.Location);
  rpc GetLocation(protolca.Ref) returns (Location);
  rpc PutLocation(protolca.Location) returns (Ref);

  // methods for Parameter
  rpc GetParameters(google.protobuf.Empty) returns (stream protolca.Parameter);
  rpc GetParameter(protolca.Ref) returns (Parameter);
  rpc PutParameter(protolca.Parameter) returns (Ref);

  // methods for Process
  rpc GetProcesses(google.protobuf.Empty) returns (stream protolca.Process);
  rpc GetProcess(protolca.Ref) returns (Process);
  rpc PutProcess(protolca.Process) returns (Ref);

  // methods for ProductSystem
  rpc GetProductSystems(google.protobuf.Empty) returns (stream protolca.ProductSystem);
  rpc GetProductSystem(protolca.Ref) returns (ProductSystem);
  rpc PutProductSystem(protolca.ProductSystem) returns (Ref);

  // methods for Project
  rpc GetProjects(google.protobuf.Empty) returns (stream protolca.Project);
  rpc GetProject(protolca.Ref) returns (Project);
  rpc PutProject(protolca.Project) returns (Ref);

  // methods for SocialIndicator
  rpc GetSocialIndicators(google.protobuf.Empty) returns (stream protolca.SocialIndicator);
  rpc GetSocialIndicator(protolca.Ref) returns (SocialIndicator);
  rpc PutSocialIndicator(protolca.SocialIndicator) returns (Ref);

  // methods for Source
  rpc GetSources(google.protobuf.Empty) returns (stream protolca.Source);
  rpc GetSource(protolca.Ref) returns (Source);
  rpc PutSource(protolca.Source) returns (Ref);

  // methods for UnitGroup
  rpc GetUnitGroups(google.protobuf.Empty) returns (stream protolca.UnitGroup);
  rpc GetUnitGroup(protolca.Ref) returns (UnitGroup);
  rpc PutUnitGroup(protolca.UnitGroup) returns (Ref);

}
